# bocd

./: .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
bcdpy/: __init__.py  bcdpy.py  distribution.py  hazard.py
bocd/: __init__.py  distribution.py  hazard.py
notebook/: example-01.ipynb  example-02.ipynb  example-03.ipynb  example-04.ipynb
tests/: test_distribution.py  test_hazard.py
