[metadata]
name = bocd
version = 0.1.0
description = Bayesian online changepoint detection
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/y-bar/bocd

[options]
install_requires =
  pandas
  matplotlib
  numpy
  scipy
