[metadata]
name = bocd
maintainer = Nagi Teramo
maintainer_email = teramonagi@gmail.com
version = 0.1.2
description = Bayesian online changepoint detection
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/y-bar/bocd

[options]
package_dir==.
packages=find:
install_requires =
  pandas
  matplotlib
  numpy
  scipy
